--- a/index.html
+++ b/index.html
@@ -337,6 +337,8 @@ Error message and password prompt
 
 <li>$:/state/toc/Semestre 7-Análisis Funcional--1918057515</li>
 
+<li>$:/state/toc/Semestre 7-Aprendizaje de Máquinas--1918057515</li>
+
 <li>$:/state/toc/Semestre 7-Procesos de Markov--1918057515</li>
 
 <li>$:/state/toc/Semestre 7-Programación Lineal Mixta--1918057515</li>
@@ -11819,6 +11821,9 @@ There are 2 fields, which are used by [[$:/plugins/wikilabs/link-to-tabs/styles]
 <pre>close</pre>
 </div>
 <div created="20210323114758543" modified="20210323220544800" title="$:/state/toc/Semestre 7-Análisis Funcional--1918057515">
+<pre>open</pre>
+</div>
+<div title="$:/state/toc/Semestre 7-Aprendizaje de Máquinas--1918057515">
 <pre>close</pre>
 </div>
 <div created="20210323123326176" modified="20210323220545900" title="$:/state/toc/Semestre 7-Procesos de Markov--1918057515">
@@ -11842,7 +11847,7 @@ There are 2 fields, which are used by [[$:/plugins/wikilabs/link-to-tabs/styles]
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Clase 2 Funcional: Espacio dual, corolarios de Hahn-Banach y versión geométrica]] [[Un hiperplano es cerrado ssi su f es continua]] [[Sobre este apunte]] [[Semestre 7]] Diario [[LaTeX Macros]] Pendiente [[Ejercicio Pendiente]] Teorema Definición" title="$:/StoryList">
+<div list="[[Sobre este apunte]] [[Semestre 7]] Diario [[LaTeX Macros]] Pendiente [[Ejercicio Pendiente]] [[Un hiperplano es cerrado ssi su f es continua]] [[Clase 2 Funcional: Espacio dual, corolarios de Hahn-Banach y versión geométrica]] Teorema Definición" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20200414145220556" modified="20210323022044983" revision="0" title="$:/theme" type="text/vnd.tiddlywiki">
@@ -12091,8 +12096,10 @@ X_n := X_{n-1} + \begin{cases}1\text{ con probabilidad } p\\
 -1 \text{ con probabilidad } 1 - p \end{cases}, (X_n)$$ es una cadena de Markov.
 </pre>
 </div>
-<div tags="" title="Clase 2 Funcional: Espacio dual, corolarios de Hahn-Banach y versión geométrica">
-<pre>Dado $$E$$ un evn, definimos su [[Espacio dual]]. Se demostrarán varios corolarios al [[Teorema de Hahn-Banach Analítico]] relacionados con este concepto.
+<div tags="[[Análisis Funcional]]" title="Clase 2 Funcional: Espacio dual, corolarios de Hahn-Banach y versión geométrica">
+<pre>[[17/03/2021]]
+
+Dado $$E$$ un evn, definimos su [[Espacio dual]]. Se demostrarán varios corolarios al [[Teorema de Hahn-Banach Analítico]] relacionados con este concepto.
 
 ''Corolario'' Sea $$G$$ sev, $$g\in\Lel\Cel(G, \R)$$. Entonces, $$g$$ se puede extender a todo $$E$$, y su extensión cumple $$\Vert f\Vert_{E^*} = \Vert g \Vert_{G^*}$$
 
