--- a/index.html
+++ b/index.html
@@ -369,6 +369,10 @@ Error message and password prompt
 
 <li>15/03/2021</li>
 
+<li>16/03/2021</li>
+
+<li>17/03/2021</li>
+
 <li>23/03/2021</li>
 
 <li>24/03/2021</li>
@@ -449,7 +453,7 @@ Error message and password prompt
 
 <li>Programas Lineales</li>
 
-<li>Relación de Biortogonalidad con clausura</li>
+<li>Relación de doble ortogonalidad con clausura</li>
 
 <li>Semestre 7</li>
 
@@ -11018,7 +11022,6 @@ color:$(foregroundColor)$;
 <pre>[[Sobre este apunte]]
 [[Semestre 7]]
 [[Diario]]
-[[LaTeX Macros]]
 [[Pendiente]]
 [[Ejercicio Pendiente]]
 [[Teorema]]
@@ -11779,7 +11782,7 @@ There are 2 fields, which are used by [[$:/plugins/wikilabs/link-to-tabs/styles]
 <pre>yes</pre>
 </div>
 <div created="20201231112737163" modified="20210324195459400" title="$:/state/sidebar">
-<pre>no</pre>
+<pre>yes</pre>
 </div>
 <div created="20201231113345823" modified="20201231143141082" title="$:/state/strollhometabs-338615865">
 <pre>Recent updates to Stroll</pre>
@@ -11791,7 +11794,7 @@ There are 2 fields, which are used by [[$:/plugins/wikilabs/link-to-tabs/styles]
 <pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
 <div created="20210323124358600" modified="20210324190818700" title="$:/state/tab--2112689675">
-<pre>$:/core/ui/ControlPanel/Advanced</pre>
+<pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
 <div created="20210323021402508" modified="20210324194037100" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Plugins</pre>
@@ -11800,10 +11803,10 @@ There are 2 fields, which are used by [[$:/plugins/wikilabs/link-to-tabs/styles]
 <pre>$:/core/ui/ControlPanel/Stylesheets</pre>
 </div>
 <div created="20210323021351979" modified="20210324194035400" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Settings</pre>
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20201231113427134" modified="20210323163801200" title="$:/state/tab/moresidebar-1850697562">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
 <div created="20210323160922400" modified="20210323160924800" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
@@ -11821,7 +11824,7 @@ There are 2 fields, which are used by [[$:/plugins/wikilabs/link-to-tabs/styles]
 <pre>close</pre>
 </div>
 <div created="20210323114758543" modified="20210323220544800" title="$:/state/toc/Semestre 7-Análisis Funcional--1918057515">
-<pre>open</pre>
+<pre>close</pre>
 </div>
 <div title="$:/state/toc/Semestre 7-Aprendizaje de Máquinas--1918057515">
 <pre>close</pre>
@@ -11847,7 +11850,7 @@ There are 2 fields, which are used by [[$:/plugins/wikilabs/link-to-tabs/styles]
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Sobre este apunte]] [[Semestre 7]] Diario [[LaTeX Macros]] Pendiente [[Ejercicio Pendiente]] [[Un hiperplano es cerrado ssi su f es continua]] [[Clase 2 Funcional: Espacio dual, corolarios de Hahn-Banach y versión geométrica]] Teorema Definición" title="$:/StoryList">
+<div list="[[Variable aleatoria]] [[Variable Aleatoria]] [[Proceso Estocástico]] [[Mínimos Cuadrados]] [[Cadena de Markov]] [[Clase 2 Funcional]] [[Relación de Biortogonalidad con clausura]] [[Espacio ortogonal]] [[Clase 4 Funcional: Espacio bidual]] [[Sobre este apunte]] [[Semestre 7]] Diario Pendiente [[Ejercicio Pendiente]] Definición" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20200414145220556" modified="20210323022044983" revision="0" title="$:/theme" type="text/vnd.tiddlywiki">
@@ -11974,6 +11977,12 @@ There are 2 fields, which are used by [[$:/plugins/wikilabs/link-to-tabs/styles]
 <div created="20210323210440700" modified="20210324123403100" tags="Diario" title="15/03/2021" tmap.id="1fa55446-aed7-4cf9-9f6c-b5f50fdf2948">
 <pre></pre>
 </div>
+<div tags="Diario" title="16/03/2021">
+<pre></pre>
+</div>
+<div tags="Diario" title="17/03/2021">
+<pre></pre>
+</div>
 <div created="20210323210550800" modified="20210324123423400" tags="Diario" title="23/03/2021" tmap.id="86c74b35-b914-4c0c-a88d-71d53ec14be4">
 <pre></pre>
 </div>
@@ -12015,7 +12024,7 @@ Para todo $$\{i_j: j\leq n+1\}\subseteq I$$ donde esta expresión tiene sentido.
 
 ''Intuitivamente:'' Condicional al presente, el futuro del proceso es independiente del pasado
 
-[[Ejercicio:]] Demostrar que esta intuición es correcta, es decir, que esta condición es equivalente a que $$X_{n+1}$$ (el futuro) y $$(X_0, ..., X_{n-1})$$ (el pasado) son independientes condicionales a $$X_n$$.</pre>
+[[Ejercicio Pendiente]] Demostrar que esta intuición es correcta, es decir, que esta condición es equivalente a que $$X_{n+1}$$ (el futuro) y $$(X_0, ..., X_{n-1})$$ (el pasado) son independientes condicionales a $$X_n$$.</pre>
 </div>
 <div author="" created="20210322221336264" modified="20210324132132600" tags="[[Análisis Funcional]]" title="Clase 1 Funcional: Demostración Hahn-Banach Analítico" tmap.id="6a937de8-ca74-4df9-9352-15f5e43ae2f4">
 <pre>[[15/03/2021]]
@@ -12068,7 +12077,9 @@ modelo para I), es decir:
 de modo tal que resolver el PLM permita extraer directamente una solución óptima de la instancia I.</pre>
 </div>
 <div created="20210323115035557" modified="20210324121032700" tags="[[Procesos de Markov]]" title="Clase 1: Definiciones básicas, recuerdos de Probabilidades" tmap.id="e10f2b6d-eef6-4c2e-9b7e-2278d0fc6e1d">
-<pre>Se recuerdan las definiciones de espacio de probabilidad y de [[Variable aleatoria]]. Además se recuerda la notación usual:
+<pre>[[16/03/2021]]
+
+Se recuerdan las definiciones de espacio de probabilidad y de [[Variable aleatoria]]. Además se recuerda la notación usual:
 
 $$
 \P(X\in A):= \P(X^{-1}(A))
@@ -12190,11 +12201,11 @@ $$
 \Vert J_x \Vert_{E^{**}} = \sup_{\Vert f \Vert_{E^*}\leq 1}|f(x)|\leq \Vert x \Vert_{E}
 $$
 
-Más aún, de la [[Clase 2 Funcional]] se tiene que $$
+Más aún, de la [[Clase 2 Funcional: Espacio dual, corolarios de Hahn-Banach y versión geométrica]] se tiene que $$
 \Vert J_x \Vert_{E^{**}} =\Vert x \Vert_{E}
 $$. Entonces, el mapa $$x\mapsto J_x$$ es una isometría inyectiva. Con esto, se puede definir un [[Espacio reflexivo]].
 
-Luego, se define el [[Espacio ortogonal]], y se investiga la [[Relación de Biortogonalidad con clausura]]</pre>
+Luego, se define el [[Espacio ortogonal]], y se investiga la [[Relación de doble ortogonalidad con clausura]].</pre>
 </div>
 <div created="20210324113052200" modified="20210324123258200" tags="[[Aprendizaje de Máquinas]]" title="Clase 4 ML: Máxima verosimilitud" tmap.id="1586b874-14c1-4085-8cc1-69cf3c3cbfaf">
 <pre>[[24/03/2021]]
@@ -12287,7 +12298,7 @@ N^\perp= \{x\in E: &lt;f, x&gt;=0\forall f\in N\}
 $$
 
 
-''Observación'' Ver [[Relación de Biortogonalidad con clausura]]
+''Observación'' Ver [[Relación de doble ortogonalidad con clausura]]
 </pre>
 </div>
 <div created="20210324141626600" modified="20210324142346200" tags="Definición" title="Espacio reflexivo" tmap.id="5114941e-85dd-40c2-b63c-174a75c2a243">
@@ -12425,7 +12436,7 @@ Una descripción de una instancia $$I$$ debe tener 3 características (usualment
 * Un sentido de optimización (minimizar o maximizar)</pre>
 </div>
 <div created="20210323194153600" modified="20210323194544400" tags="Definición" title="Proceso Estocástico" tmap.id="77dfa0a0-1564-4983-9408-0039619057b8">
-<pre>Una sucesión (X_n), cada elemento una [[Variable Aleatoria]] a $$S$$, se le llama proceso estocástico. Cabe destacar que la indexación es numerable.
+<pre>Una sucesión (X_n), cada elemento una [[Variable aleatoria]] a $$S$$, se le llama proceso estocástico. Cabe destacar que la indexación es numerable.
 
 Alternativamente, se puede considerar como una variable aleatoria a $$S^\N$$ dotada del espacio producto.</pre>
 </div>
@@ -12444,7 +12455,7 @@ $$
 
 Donde $$S$$ es un [[Conjunto Lineal Mixto]]. El apellido del conjunto lineal $$S$$ lo hereda el programa lineal.</pre>
 </div>
-<div created="20210324142643400" modified="20210324165147400" tags="Teorema" title="Relación de Biortogonalidad con clausura" tmap.id="da4e5ab4-b229-441c-8b6d-c922993400c4">
+<div created="20210324142643400" modified="20210324165147400" tags="Teorema" title="Relación de doble ortogonalidad con clausura" tmap.id="da4e5ab4-b229-441c-8b6d-c922993400c4">
 <pre>Dado $$M$$ sev de $$E$$ evn, se tiene que $$(M^\perp)^\perp = \overline M$$. Más aún, dado $$N$$ sev de $$E^*$$, se tiene que $$\overline N \subseteq (N^\perp)^\perp$$. Si $$E$$ es [[Espacio reflexivo]], se tiene igualdad. 
 
 ''Demostración''
@@ -12465,20 +12476,17 @@ Sea $$x\in (M^\perp)^\perp$$, suponer que $$x\notin \overline M$$, por lo que se
 <pre>&lt;&lt;toc-selective-expandable 'Semestre 7' sort[title]&gt;&gt;</pre>
 </div>
 <div created="20210323160241100" modified="20210324165300400" title="Sobre este apunte" tmap.id="12d2be00-33d7-4708-bcdf-c4d2be6a4a9c">
-<pre>Este apunte intenta tener las clases de matemáticas que estoy tomando. Si esto funciona bien, seguiré pasando otros cursos, pero lo empecé tarde, así que la prioridad es estar al día primero.
+<pre>Este apunte intenta tener las clases de matemáticas que estoy tomando. Si esto funciona bien, seguiré con otros cursos, pero lo empecé tarde, así que la prioridad es estar al día primero.
 
 ''ADVERTENCIAS''
 
-
-Antes de modificar las macros de LaTeX, hacer un respaldo - en un momento hice esto y toda la wiki cayó. 
-
-Todo lo de LaTeX se escribe en MathML, por lo que está disponible en Firefox y Safari, pero navegadores basados en Chromium no lo soportan. Esto ocurre pues el único plugin que me permitía hacer macros de LaTeX era uno de TeXZilla. Se pueden cambiar en las configuraciones a KaTeX, que sí funciona en cualquier navegador, pero se romperán las macros.  
+Todo lo de LaTeX se escribe en MathML, por lo que está disponible en Firefox y Safari, pero navegadores basados en Chromium no lo soportan. Esto ocurre pues el único plugin que me permitía hacer macros de LaTeX era uno en MathML. Se pueden cambiar en las configuraciones a KaTeX, que sí funciona en cualquier navegador, pero se romperán las macros.  
 
 ''Prioridades''
 
-* Pasar todas las clases pendientes
+* Pasar acá todas las clases pendientes
 * Hacer esto disponible en Chrome
-* Agregar una visualización de grafo de todo, tengo un par de problemas con TiddlyMap</pre>
+* Agregar una visualización de grafo de la relación entre todos los teoremas. Esto es posible, pero han habido problemas técnicos.</pre>
 </div>
 <div created="20210323020204367" modified="20210323214431300" title="Teorema" tmap.id="23444272-d0ed-463c-9456-d774f698106e">
 <pre>Estos son los teoremas utilizados en el notebook:
